<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mini Moods</string>
    <string name="no_moods" tools:keep="@string/no_moods">No moods available</string>
    <string name="export">Export</string>
    <string name="contact_us">Contact us</string>
    <string name="visit_website">Visit our website</string>
    <string name="query" tools:keep="@string/query">Mini Moods Query</string>
    <string name="contribute">Contribute</string>
    <string name="very_happy">Very happy</string>
    <string name="neutral">Neutral</string>
    <string name="very_sad">Very sad</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="crash_report_prompt">Mini Moods relies on information from any issues you experience to improve the app. Do you want to help by sending anonymous crash statistics?</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="system" translatable="false">system</string>
    <string name="version" translatable="false">%s (%s)</string>
    <string name="key_should_log_crashes" translatable="false">key_should_log_crashes</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="custom">Custom</string>
    <string name="date_range">Date Range</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string-array name="theme_entries">
        <item>@string/system_default</item>
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>

    <string-array name="theme_values">
        <item>@string/system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
</resources>
