<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingStart="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/widget_mood_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_mood_button"
            android:contentDescription="@string/very_sad"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/widget_mood_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_mood_button"
            android:contentDescription="@string/sad"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/widget_mood_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_mood_button"
            android:contentDescription="@string/neutral"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/widget_mood_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_mood_button"
            android:contentDescription="@string/happy"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">


        <ImageButton
            android:id="@+id/widget_mood_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/background_mood_button"
            android:contentDescription="@string/very_happy"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_1" />

    </LinearLayout>

</LinearLayout>
