<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.cmgcode.minimoods.BuildConfig"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/about_wrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="48dp"
                android:minWidth="128dp"
                android:minHeight="128dp"
                app:srcCompat="@drawable/ic_mood_1"
                app:tint="@color/colorMood1"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"/>

        <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{@string/version(BuildConfig.VERSION_NAME, BuildConfig.VERSION_CODE)}"
                android:gravity="center"
                tools:text="2.0.0 (2)"
                android:paddingTop="16dp"
                android:paddingBottom="64dp"
                app:layout_anchor="@id/app_icon"
                app:layout_anchorGravity="bottom"
                android:layout_gravity="bottom"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                app:layout_anchor="@id/version"
                app:layout_anchorGravity="bottom"
                android:layout_gravity="bottom">

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    app:contentPadding="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"/>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    app:contentPadding="16dp"
                    android:layout_marginTop="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visit_website"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/contribute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    app:contentPadding="16dp"
                    android:layout_marginTop="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contribute"/>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <nl.dionsegijn.konfetti.KonfettiView
                android:id="@+id/confetti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
