<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.cmgcode.minimoods.moods.MoodViewModel"/>
        <import type="android.view.View"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="32dp"
                tools:context=".moods.MainActivity">

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_logging_consent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.shouldReportCrashes == null ? View.VISIBLE : View.GONE}"
                    style="@style/Card"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/card_mood">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingHorizontal="16dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/crash_report_prompt"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:text="@string/yes"
                                android:onClick="@{() -> viewModel.updateCrashReportingPreference(true)}"/>

                        <com.google.android.material.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:text="@string/no"
                                android:onClick="@{() -> viewModel.updateCrashReportingPreference(false)}"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_mood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_logging_consent"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintBottom_toTopOf="@id/card_progress">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:padding="16dp">

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            app:iconGravity="end"
                            app:icon="@drawable/ic_expand"
                            app:dayOfTheMonth="@{viewModel.selectedDate}"
                            tools:text="12 July"/>

                    <include
                            layout="@layout/layout_mood_row"
                            bind:viewModel="@{viewModel}"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_mood"
                    app:layout_constraintBottom_toTopOf="@id/card_calendar">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                    <ImageView
                            android:id="@+id/mood_label_top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxHeight="32dp"
                            android:maxWidth="32dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/ic_mood_1"
                            app:tint="@color/colorMood1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:contentDescription="@string/very_happy"/>

                    <ImageView
                            android:id="@+id/mood_label_mid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxHeight="32dp"
                            android:maxWidth="32dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/ic_mood_3"
                            app:tint="@color/colorMood3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/mood_label_top"
                            app:layout_constraintBottom_toTopOf="@id/mood_label_bottom"
                            android:contentDescription="@string/neutral"/>

                    <ImageView
                            android:id="@+id/mood_label_bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxHeight="32dp"
                            android:maxWidth="32dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/ic_mood_5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:contentDescription="@string/very_sad"
                            app:tint="@color/colorMood5"/>

                    <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/chart"
                            android:layout_width="0dp"
                            android:layout_height="300dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/mood_label_top"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_calendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_progress"
                    app:layout_constraintBottom_toTopOf="@id/card_export">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center">

                    <com.applandeo.materialcalendarview.CalendarView
                            android:id="@+id/calendar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:pagesColor="@color/colorCard"
                            app:headerColor="@color/colorCard"
                            app:headerLabelColor="@color/colorIcon"
                            app:todayLabelColor="@color/colorIcon"
                            app:daysLabelsColor="@color/colorIcon"
                            app:abbreviationsBarColor="@color/colorCard"
                            app:abbreviationsLabelsColor="@color/colorIcon"
                            app:anotherMonthsDaysLabelsColor="@color/colorDisabled"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_export"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Card"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_calendar"
                    app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="16dp">

                    <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:layout_marginEnd="32dp"
                            android:maxHeight="48dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/ic_export_excel"
                            android:tint="@color/colorIcon"
                            android:onClick="@{() -> viewModel.export()}"
                            android:contentDescription="@string/export"/>

                    <ImageButton
                            android:id="@+id/settings"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:selectableItemBackground"
                            android:maxHeight="48dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/ic_settings"
                            android:tint="@color/colorIcon"
                            android:contentDescription="@string/settings"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
